--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,25 @@ body {
     justify-content: center;
     align-items: center;
     border-left: 4px solid #fff;
+    border-right: 4px solid transparent;
+    transition: all 0.3s ease-in-out;
 }
 
 .menu-item:hover {
     border-left: 4px solid blue;
     cursor: pointer;
+}
+
+.menu-item--active {
+    border-left: 4px solid blue;
+}
+
+.menu-item > i {
+    color: #333333;
+}
+
+.menu-item--active > i {
+    color: blue;
 }
 
 .content {
