--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:400,600,700|Open+Sans:400,600,700');
+
 body {
   margin: 0;
   padding: 0;
